# raspberry-iot

./: .gitignore  CMakeLists.txt  CompileOptions.cmake  Dockerfile  Readme.md  build.sh  build_macos.sh  build_rpi.sh  dashboard.html  dump_project.py  rpi_toolchain.cmake  run_tests.sh
Application/: CMakeLists.txt
Application/cfg/: config.json
Application/include/App/: app.h
Application/src/: app.cpp  main.cpp
Components/: CMakeLists.txt
Components/Foo/: CMakeLists.txt
Components/Foo/Test/: Test-foo.cpp
Components/Foo/include/Foo/: foo.h
Components/Foo/src/: foo.cpp
Components/Interfaces/: CMakeLists.txt
Components/Interfaces/include/Interfaces/: ii2c_bus.h  isensor.h  sensor_config.h
Components/LinuxI2C_Manager/: CMakeLists.txt  Test.cmake
Components/LinuxI2C_Manager/Test/: Test-I2C_Manager.cpp
Components/LinuxI2C_Manager/include/I2C_Manager/: I2C_Manager.h
Components/LinuxI2C_Manager/include/LinuxI2C_Manager/: linux_i2c_manager.h
Components/LinuxI2C_Manager/src/: I2C_Manager.cpp  linux_i2c_manager.cpp
Components/NetworkMQTT/: CMakeLists.txt  Test.cmake
Components/NetworkMQTT/include/NetworkMQTT/: mqtt_publisher.h
Components/NetworkMQTT/src/: mqtt_publisher.cpp
Components/SensorBME280/: CMakeLists.txt  Test.cmake
Components/SensorBME280/Test/: Test-SensorBME280.cpp
Components/SensorBME280/include/SensorBME280/: bme280_defs.h  bme280_sensor.h
Components/SensorBME280/src/: bme280_sensor.cpp
Components/SensorBuilder/: CMakeLists.txt
Components/SensorBuilder/include/SensorBuilder/: sensor_builder.h
Components/SensorBuilder/src/: sensor_builder.cpp
Components/SensorDummy/: CMakeLists.txt
Components/SensorDummy/include/SensorDummy/: sensor_dummy.h
Components/SensorDummy/src/: sensor_dummy.cpp
Components/SensorLPS25HB/: CMakeLists.txt
Components/SensorLPS25HB/include/SensorLPS25HB/: lps25hb_defs.h  sensor_lps25hb.h
Components/SensorLPS25HB/src/: sensor_lps25hb.cpp
Components/StubI2C_Manager/: CMakeLists.txt
Components/StubI2C_Manager/include/StubI2C_Manager/: stub_i2c_manager.h
Components/StubI2C_Manager/src/: stub_i2c_manager.cpp
Tests/Mocks/: MockI2C_Bus.h
cmake/toolchains/: rpi_docker_toolchain.cmake
